feat: implement expenses and financial reports
